[tool.poetry]
name = "website"
version = "0.1.0"
description = ""
authors = ["aroh <aroh@madup.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.1"
pip-tools = "^5.3.1"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
pre-commit-hooks = "^3.2.0"
pre-commit = "^2.7.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
